--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ngrx/store": "^4.0.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "install": "^0.10.1",
+    "npm": "^5.3.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
