--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@ngrx/store": "^4.0.0",
+    "@types/google.visualization": "0.0.35",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "install": "^0.10.1",
@@ -37,6 +38,7 @@
     "@angular/cli": "1.1.3",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
+    "@types/googlemaps": "^3.26.17",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
